deployments/rocksolid/overlays/v1/patch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocksolid
spec:
  template:
    spec:
      containers:
      - name: rocksolid
        image: gijsvandulmen/echoserver:latest
