deployments/rocksolid/overlays/v1/patch-destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: rocksolid
spec:
    host: rocksolid-v1
    subsets:
    - name: v1
      labels:
        version: v1
